syntax = "proto3";

package vehicle;

service VehicleService {
  rpc createVehicle(CreateVehicleDto) returns (VehicleDto) {}
  rpc listVehicles(Search) returns (ListVehicleResponse) {}
}

message CreateVehicleDto {
  string vehiclePlate = 1;
  string vehicleColor = 2;
  string vehicleModel = 3;
  string vehicleBrand = 4;
  string vehicleYear = 5;
}

message VehicleDto {
  string vehicleId = 1;
  string vehiclePlate = 2;
  string vehicleColor = 3;
  string vehicleModel = 4;
  string vehicleBrand = 5;
  string vehicleYear = 6;
}

message ListVehicleResponse {
  repeated VehicleDto vehicles = 1;
}

message Search {
  string search = 1;
}